--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,9 @@
 
 <body>
 <div class="wrapper">
-    <a class="mf-btn mf-btn--primary float-right" href="/explorer/#!/Item" target="_blank">View API Reference</a>
+    <div class="float-right" style="align:center">
+        <a class="mf-btn mf-btn--primary" href="/explorer/#!/Item" target="_blank">View API Reference</a>
+    </div>
     <header>
         <h1>HelloTodo</h1>
 
@@ -101,8 +103,8 @@
                 <p class="next">Continue to <a href="https://github.com/ibm-bluemix-mobile-services/bms-samples-android-hellotodo"
                                    target="_blank">Android HelloTodo sample</a></p>
                 <p class="next">Learn to create a <a href="https://github.com/ibm-bluemix-mobile-services/bms-hellotodo-strongloop"
-                                                     target="_blank">mobile backend</a></p>
-                <p class="next">Learn more about <a href="https://console.ng.bluemix.net/catalog/mobile-client-access/"
+                                                     target="_blank">mobile backend</a> with StrongLoop</p>
+                <p class="next">Learn to protect your mobile backend with <a href="https://console.ng.bluemix.net/catalog/mobile-client-access/"
                                                     target="_blank">Mobile Client Access</a></p>
             </div>
         </div>
@@ -126,7 +128,7 @@
         <a href="https://github.com/ibm-bluemix-mobile-services/bms-hellotodo-strongloop" target="_blank"><b>Mobile backend sample</b></a>
     </div>
     <div class="made-with float-right">
-        Made with <b><a href="http://www.ibm.com/cloud-computing/bluemix/solutions/mobilefirst/">Bluemix Mobile Services</a></b>
+        Created with <b><a href="http://www.ibm.com/cloud-computing/bluemix/solutions/mobilefirst/">Bluemix Mobile Services</a></b>
         and <b><a href="https://strongloop.com/">StrongLoop</a></b>
     </div>
 
