updated links to docs

--- a/client/index.html
+++ b/client/index.html
@@ -93,8 +93,8 @@
 				<span class="api-block">
 					<a href='/explorer/#!/Item/Item_deleteById' target='_blank'>DELETE</a> - remove item<br>
 					<code><pre>/api/Items/:id</pre></code>
-                <p>However request failed since  DELETE endpoint is protected by the
-                    <a href="https://console.ng.bluemix.net/catalog/mobile-client-access/" target="_blank">Mobile Client Access</a> service
+                <p>However request failed since DELETE endpoint is protected by the
+                    <a href="https://www.ng.bluemix.net/docs/services/mobileaccess/index.html" target="_blank">Mobile Client Access</a> service
                     and can only be accessed by mobile applications instrumented with Mobile Client Access SDK.
 				</span>
 
@@ -104,7 +104,7 @@
                                    target="_blank">Android HelloTodo sample</a></p>
                 <p class="next">Learn to create a <a href="https://github.com/ibm-bluemix-mobile-services/bms-hellotodo-strongloop"
                                                      target="_blank">mobile backend</a> with StrongLoop</p>
-                <p class="next">Learn to protect your mobile backend with <a href="https://console.ng.bluemix.net/catalog/mobile-client-access/"
+                <p class="next">Learn to protect your mobile backend with <a href="https://www.ng.bluemix.net/docs/services/mobileaccess/index.html"
                                                     target="_blank">Mobile Client Access</a></p>
             </div>
         </div>
